# artifact

./: arabic_flashcard.html  maintenance_functional.html  maintenance_module_demo.html  study.html
ai/: gemini.py
driving/: additional_quizzes.json  backend.py  comprehenisve_quizz.json  comprehesive_section.json  (+15 more)
llama_agent/: .env  .env.example  GEMINI_AGENT_README.md  ODOO_DEVELOPMENT_GUIDE.md  README.md  ai_agent.py  create_stock_report.py  gemini_odoo_agent.py  langchain_odoo_agent.py  llm_config.py  odoo_agent.py  prompts.py  pyproject.toml  quick_test.py  requirements.txt  test_doc.py  test_file.js  test_gemini_setup.py  test_odoo.py  web_ui.py
llama_agent/chroma_db/: chroma.sqlite3
llama_agent/docs/: test_file.js.md
llama_agent/odoo-agent-nodejs/: .env.example  .gitignore  EXAMPLES.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  STRUCTURE.txt  index.js  package-lock.json  package.json
llama_agent/odoo-agent-nodejs/src/agent/: file-change.js  odoo-agent.js
llama_agent/odoo-agent-nodejs/src/cli/: commands.js  interactive.js
llama_agent/odoo-agent-nodejs/src/config/: config.js
llama_agent/odoo-agent-nodejs/src/llm/: llm-manager.js
llama_agent/odoo-agent-nodejs/src/parsers/: toon-parser.js
llama_agent/odoo-agent-nodejs/src/prompts/: templates.js
llama_agent/odoo-agent-nodejs/src/utils/: diff-viewer.js  file-manager.js  ui-helpers.js
llama_agent/src/llama_agent/: __init__.py
llama_agent/templates/: index.html
llama_agent/test_modules/sample_inventory/: __manifest__.py
llama_agent/test_modules/sample_inventory/models/: product_template.py
(+141 files in other folders)
